--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         dataUrl: buildUrl + "/HashCrashReplicaWebGL.data",
         frameworkUrl: buildUrl + "/HashCrashReplicaWebGL.framework.js",
         codeUrl: buildUrl + "/HashCrashReplicaWebGL.wasm",
-        streamingAssetsUrl: "StreamingAssets",
+        streamingAssetsUrl: "Build/StreamingAssets",
         companyName: "DefaultCompany",
         productName: "FreeFall2DGit1",
         productVersion: "0.1.0",
