--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           web3UnityInstance = unityInstance;
           loadingBar.style.display = "none";
           fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
+            document.makeFullscreen('unity-container');
           };
         }).catch((message) => {
           alert(message);
