--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
 
       // NOTE: Update these paths to match your build output folder name
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/FreeFall2DWebGLBuild.loader.js";
+      const loaderUrl = buildUrl + "/HashCrashReplicaWebGL.loader.js";
 
       const config = {
-        dataUrl: buildUrl + "/FreeFall2DWebGLBuild.data",
-        frameworkUrl: buildUrl + "/FreeFall2DWebGLBuild.framework.js",
-        codeUrl: buildUrl + "/FreeFall2DWebGLBuild.wasm",
+        dataUrl: buildUrl + "/HashCrashReplicaWebGL.data",
+        frameworkUrl: buildUrl + "/HashCrashReplicaWebGL.framework.js",
+        codeUrl: buildUrl + "/HashCrashReplicaWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "FreeFall2D",
